--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,31 @@
 {% extends 'base.html' %}
-{% block title %}Edit Product{% endblock %}
+{% load static %}
+{% block title %}Dashboard{% endblock %}
 
 {% block content %}
 
 <div class="page-heading">
-    <h3>Profile Statistics</h3>
+    <h3>
+        {% if role == 'admin' %}
+        System Dashboard
+        {% elif role == 'manager' %}
+        Manager Dashboard
+        {% else %}
+        Staff Dashboard
+        {% endif %}
+    </h3>
 </div>
+
 <div class="page-content">
     <section class="row">
+
+        <!-- LEFT CONTENT -->
         <div class="col-12 col-lg-9">
+
+            <!-- STAT CARDS -->
             <div class="row">
+
+                <!-- CARD 1 -->
                 <div class="col-6 col-lg-3 col-md-6">
                     <div class="card">
                         <div class="card-body px-3 py-4-5">
@@ -20,13 +36,27 @@
                                     </div>
                                 </div>
                                 <div class="col-md-8">
-                                    <h6 class="text-muted font-semibold">Profile Views</h6>
-                                    <h6 class="font-extrabold mb-0">112.000</h6>
+                                    <h6 class="text-muted font-semibold">
+                                        {% if role == 'admin' %}Accounts
+                                        {% elif role == 'manager' %}Branches
+                                        {% else %}Branch{% endif %}
+                                    </h6>
+                                    <h6 class="font-extrabold mb-0">
+                                        {% if role == 'admin' %}
+                                        {{ total_accounts }}
+                                        {% elif role == 'manager' %}
+                                        {{ total_branches }}
+                                        {% else %}
+                                        {{ branch_name }}
+                                        {% endif %}
+                                    </h6>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+
+                <!-- CARD 2 -->
                 <div class="col-6 col-lg-3 col-md-6">
                     <div class="card">
                         <div class="card-body px-3 py-4-5">
@@ -37,13 +67,27 @@
                                     </div>
                                 </div>
                                 <div class="col-md-8">
-                                    <h6 class="text-muted font-semibold">Followers</h6>
-                                    <h6 class="font-extrabold mb-0">183.000</h6>
+                                    <h6 class="text-muted font-semibold">
+                                        {% if role == 'admin' %}Users
+                                        {% elif role == 'manager' %}Staff
+                                        {% else %}Products{% endif %}
+                                    </h6>
+                                    <h6 class="font-extrabold mb-0">
+                                        {% if role == 'admin' %}
+                                        {{ total_users }}
+                                        {% elif role == 'manager' %}
+                                        {{ total_staff }}
+                                        {% else %}
+                                        {{ total_products }}
+                                        {% endif %}
+                                    </h6>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+
+                <!-- CARD 3 -->
                 <div class="col-6 col-lg-3 col-md-6">
                     <div class="card">
                         <div class="card-body px-3 py-4-5">
@@ -54,13 +98,15 @@
                                     </div>
                                 </div>
                                 <div class="col-md-8">
-                                    <h6 class="text-muted font-semibold">Following</h6>
-                                    <h6 class="font-extrabold mb-0">80.000</h6>
+                                    <h6 class="text-muted font-semibold">Total Stock</h6>
+                                    <h6 class="font-extrabold mb-0">{{ total_stock }}</h6>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+
+                <!-- CARD 4 -->
                 <div class="col-6 col-lg-3 col-md-6">
                     <div class="card">
                         <div class="card-body px-3 py-4-5">
@@ -71,204 +117,81 @@
                                     </div>
                                 </div>
                                 <div class="col-md-8">
-                                    <h6 class="text-muted font-semibold">Saved Post</h6>
-                                    <h6 class="font-extrabold mb-0">112</h6>
+                                    <h6 class="text-muted font-semibold">Profit</h6>
+                                    <h6 class="font-extrabold mb-0">
+                                        {% if role == 'staff' %}
+                                        ---
+                                        {% else %}
+                                        {{ total_profit|floatformat:2 }}
+                                        {% endif %}
+                                    </h6>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+
             </div>
-            <div class="row">
-                <div class="col-12">
-                    <div class="card">
-                        <div class="card-header">
-                            <h4>Profile Visit</h4>
-                        </div>
-                        <div class="card-body">
-                            <div id="chart-profile-visit"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 col-xl-4">
-                    <div class="card">
-                        <div class="card-header">
-                            <h4>Profile Visit</h4>
-                        </div>
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col-6">
-                                    <div class="d-flex align-items-center">
-                                        <svg class="bi text-primary" width="32" height="32" fill="blue"
-                                            style="width:10px">
-                                            <use
-                                                xlink:href="assets/vendors/bootstrap-icons/bootstrap-icons.svg#circle-fill" />
-                                        </svg>
-                                        <h5 class="mb-0 ms-3">Europe</h5>
-                                    </div>
-                                </div>
-                                <div class="col-6">
-                                    <h5 class="mb-0">862</h5>
-                                </div>
-                                <div class="col-12">
-                                    <div id="chart-europe"></div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-6">
-                                    <div class="d-flex align-items-center">
-                                        <svg class="bi text-success" width="32" height="32" fill="blue"
-                                            style="width:10px">
-                                            <use
-                                                xlink:href="assets/vendors/bootstrap-icons/bootstrap-icons.svg#circle-fill" />
-                                        </svg>
-                                        <h5 class="mb-0 ms-3">America</h5>
-                                    </div>
-                                </div>
-                                <div class="col-6">
-                                    <h5 class="mb-0">375</h5>
-                                </div>
-                                <div class="col-12">
-                                    <div id="chart-america"></div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-6">
-                                    <div class="d-flex align-items-center">
-                                        <svg class="bi text-danger" width="32" height="32" fill="blue"
-                                            style="width:10px">
-                                            <use
-                                                xlink:href="assets/vendors/bootstrap-icons/bootstrap-icons.svg#circle-fill" />
-                                        </svg>
-                                        <h5 class="mb-0 ms-3">Indonesia</h5>
-                                    </div>
-                                </div>
-                                <div class="col-6">
-                                    <h5 class="mb-0">1025</h5>
-                                </div>
-                                <div class="col-12">
-                                    <div id="chart-indonesia"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-xl-8">
-                    <div class="card">
-                        <div class="card-header">
-                            <h4>Latest Comments</h4>
-                        </div>
-                        <div class="card-body">
-                            <div class="table-responsive">
-                                <table class="table table-hover table-lg">
-                                    <thead>
-                                        <tr>
-                                            <th>Name</th>
-                                            <th>Comment</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <td class="col-3">
-                                                <div class="d-flex align-items-center">
-                                                    <div class="avatar avatar-md">
-                                                        <img src="assets/images/faces/5.jpg">
-                                                    </div>
-                                                    <p class="font-bold ms-3 mb-0">Si Cantik</p>
-                                                </div>
-                                            </td>
-                                            <td class="col-auto">
-                                                <p class=" mb-0">Congratulations on your graduation!</p>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td class="col-3">
-                                                <div class="d-flex align-items-center">
-                                                    <div class="avatar avatar-md">
-                                                        <img src="assets/images/faces/2.jpg">
-                                                    </div>
-                                                    <p class="font-bold ms-3 mb-0">Si Ganteng</p>
-                                                </div>
-                                            </td>
-                                            <td class="col-auto">
-                                                <p class=" mb-0">Wow amazing design! Can you make another
-                                                    tutorial for
-                                                    this design?</p>
-                                            </td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+
         </div>
+
+        <!-- RIGHT SIDEBAR -->
         <div class="col-12 col-lg-3">
+
+            <!-- PROFILE -->
             <div class="card">
                 <div class="card-body py-4 px-5">
                     <div class="d-flex align-items-center">
                         <div class="avatar avatar-xl">
-                            <img src="assets/images/faces/1.jpg" alt="Face 1">
+                            <img src="{% static 'assets/images/faces/1.jpg' %}">
                         </div>
                         <div class="ms-3 name">
-                            <h5 class="font-bold">John Duck</h5>
-                            <h6 class="text-muted mb-0">@johnducky</h6>
+                            <h5 class="font-bold">
+                                {% if role == 'admin' %}
+                                {{ user.firstname }} {{ user.lastname }}
+                                {% else %}
+                                {{ user.firstname }} {{ user.lastname }}
+                                {% endif %}
+                            </h5>
+                            <h6 class="text-muted mb-0">
+                                {% if role == 'admin' %}
+                                Administrator
+                                {% else %}
+                                {{ user.role|title }}
+                                {% endif %}
+                            </h6>
                         </div>
                     </div>
                 </div>
             </div>
+
+            <!-- INFO -->
             <div class="card">
                 <div class="card-header">
-                    <h4>Recent Messages</h4>
-                </div>
-                <div class="card-content pb-4">
-                    <div class="recent-message d-flex px-4 py-3">
-                        <div class="avatar avatar-lg">
-                            <img src="assets/images/faces/4.jpg">
-                        </div>
-                        <div class="name ms-4">
-                            <h5 class="mb-1">Hank Schrader</h5>
-                            <h6 class="text-muted mb-0">@johnducky</h6>
-                        </div>
-                    </div>
-                    <div class="recent-message d-flex px-4 py-3">
-                        <div class="avatar avatar-lg">
-                            <img src="assets/images/faces/5.jpg">
-                        </div>
-                        <div class="name ms-4">
-                            <h5 class="mb-1">Dean Winchester</h5>
-                            <h6 class="text-muted mb-0">@imdean</h6>
-                        </div>
-                    </div>
-                    <div class="recent-message d-flex px-4 py-3">
-                        <div class="avatar avatar-lg">
-                            <img src="assets/images/faces/1.jpg">
-                        </div>
-                        <div class="name ms-4">
-                            <h5 class="mb-1">John Dodol</h5>
-                            <h6 class="text-muted mb-0">@dodoljohn</h6>
-                        </div>
-                    </div>
-                    <div class="px-4">
-                        <button class='btn btn-block btn-xl btn-light-primary font-bold mt-3'>Start
-                            Conversation</button>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-header">
-                    <h4>Visitors Profile</h4>
+                    <h4>Summary</h4>
                 </div>
                 <div class="card-body">
-                    <div id="chart-visitors-profile"></div>
+                    <ul class="list-group list-group-flush small">
+                        {% if role == 'admin' %}
+                        <li class="list-group-item">Accounts: {{ total_accounts }}</li>
+                        <li class="list-group-item">Users: {{ total_users }}</li>
+                        <li class="list-group-item">Branches: {{ total_branches }}</li>
+                        <li class="list-group-item">Products: {{ total_products }}</li>
+                        {% elif role == 'manager' %}
+                        <li class="list-group-item">Branches: {{ total_branches }}</li>
+                        <li class="list-group-item">Staff: {{ total_staff }}</li>
+                        <li class="list-group-item">Products: {{ total_products }}</li>
+                        {% else %}
+                        <li class="list-group-item">Branch: {{ branch_name }}</li>
+                        <li class="list-group-item">Products: {{ total_products }}</li>
+                        <li class="list-group-item">Stock: {{ total_stock }}</li>
+                        {% endif %}
+                    </ul>
                 </div>
             </div>
+
         </div>
     </section>
 </div>
-
 
 {% endblock %}
