--- a/templates/settings.html
+++ b/templates/settings.html
@@ -211,17 +211,20 @@
 </div>
 
 <!-- ================= ACCOUNT INFO MODAL ================= -->
-<div class="modal fade" id="accountInfoModal" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog modal-md modal-dialog-centered modal-dialog-scrollable">
+<!--scrolling content Modal -->
+<div class="modal fade" id="accountInfoModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalScrollableTitle"
+    aria-hidden="true">
+    <div class="modal-dialog modal-dialog-scrollable" role="document">
         <div class="modal-content">
-
-            <div class="modal-header py-2">
-                <h6 class="modal-title mb-0">Account Information</h6>
-                <button type="button" class="btn-close btn-sm" data-bs-dismiss="modal"></button>
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalScrollableTitle">
+                Account Information</h5>
+                <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                    <i data-feather="x"></i>
+                </button>
             </div>
-
-            <div class="modal-body p-0">
-                <ul class="list-group list-group-flush small">
+            <div class="modal-body">
+<ul class="list-group list-group-flush small">
 
                     <li class="list-group-item py-1 d-flex justify-content-between">
                         <span>Account</span>
@@ -275,17 +278,23 @@
 
                 </ul>
             </div>
-
-            <div class="modal-footer py-1">
-                <button class="btn btn-sm btn-secondary" data-bs-dismiss="modal">
-                    Close
+            <div class="modal-footer">
+                <button type="button" class="btn btn-light-secondary" data-bs-dismiss="modal">
+                    <i class="bx bx-x d-block d-sm-none"></i>
+                    <span class="d-none d-sm-block">Close</span>
+                </button>
+                <button type="button" class="btn btn-primary ml-1" data-bs-dismiss="modal">
+                    <i class="bx bx-check d-block d-sm-none"></i>
+                    <span class="d-none d-sm-block">Accept</span>
                 </button>
             </div>
-
         </div>
     </div>
 </div>
-
+</div>
+</div>
+</div>
+</div>
 
 <script>
 
